<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--<item-->
        <!--android:id="@+id/nav_home"-->
        <!--android:icon="@drawable/ic_home_black_24dp"-->
        <!--android:title="Home" />-->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_livingroom"
            android:title="LivingRoom" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_bedroom"
            android:title="@string/nav_bedroom" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_kitchen"
            android:title="@string/nav_kitchen" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_bathroom"
            android:title="@string/nav_bathroom" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_newsettings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="Settings" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_privacy"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_aboutus"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
